<?xml version="1.0"?>
<package format="2">
  <name>zeus_watchdog</name>
  <version>0.0.0</version>
  <description>The zeus_watchdog package</description>

  <maintainer email="jeremie.bourque@usherbrooke.ca">jeremie</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>topic_tools</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>

  <export>
  </export>

</package>
